2005-10-23  John Sullivan  <john@wjsullivan.net>

	* delicious.el (delicious-posts-file): New function to return the
	full path for the posts file.
	(delicious-get-posts-buffer): Use new `delicious-posts-file'
	function.
	(delicious-update-timestamp): Use new
	`delicious-posts-file'. Should fix the problem of the disappearing
	timestamp. Thanks to Gunnar Wrobel for the bug report.

2005-10-16  John Sullivan  <john@wjsullivan.net>

	* delicious.el (delicious-update-timestamp): Fix bug that was
	causing the timestamp in new posts files to get bumped to the end
	of the file. 
	(delicious-save-buffer): Add new argument, NO-BURY, for situations
	when we want to save the buffer but not bury it. 

2005-10-13  John Sullivan  <john@wjsullivan.net>

	* delicioapi.el (url-auth): Add missing require needed for
	url-version "Emacs", and maybe others too. Solves error about
	url-is-cached.

2005-10-11  John Sullivan  <john@wjsullivan.net>

	* delicioapi.el (delicious-api-register-auth): url-version "Emacs"
	requires url-http to be loaded for basic auth to work. 

2005-10-10  John Sullivan  <john@wjsullivan.net>

	* delicious.el (delicious-search-delete): Look up the post's
	actual url, instead of just copying it from the search results
	buffer. Deleting from the search results buffer should actually
	work now.
	(delicious-update-timestamp): Put the timestamp on its own line in
	the posts file, easier not to accidentally include it in a post
	that way.
	(delicious-search-insert-match): Insert a space if the field is
	empty. This way, the 'e' binding and other text properties will
	work on a blank extended description field.
	(delicious-search-next-result): Improved TAB behavior in the
	search results buffer. Previously it just wrapped to the beginning
	of the buffer when the user was on the last post, but did not
	actually go to the first post in the buffer. Now it does.

	* delicioapi.el (delicious-api-post): Fix bugs with hexifying the